--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Web AI App</title>
+    <title>ImageSense</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -22,7 +22,7 @@
 
         <!-- Title Container -->
         <div>
-          <h3>AI-Powered Fun with Web App</h3>
+          <h3>AI-Powered Fun with ImageSense</h3>
           <p style="margin-top: -10px; font-size: 14px; color: gray">
             Let's Play Together
           </p>
